# face_recognizer_raspberryPi4

./: CMakeLists.txt
include/include/mxnet/: base.h  c_api_test.h  c_predict_api.h  engine.h  executor.h  graph_attr_types.h  imperative.h  io.h  ndarray.h  op_attr_types.h  operator.h  operator_util.h  random_generator.h  resource.h  rtc.h  storage.h  tensor_blob.h  tuple.h
include/include/mxnet-cpp/: base.h  contrib.h  executor.h  executor.hpp  initializer.h  io.h  io.hpp  kvstore.h  kvstore.hpp  lr_scheduler.h  metric.h  model.h  monitor.h
lib/: readme.md
lib/cmake/dmlc/: DMLCTargets.cmake  dmlc-config-version.cmake
src/: feature_extract.hpp  labels.txt  main.cpp
